--- a/src/main/resources/public/src/scss/theme/default/_modal.scss
+++ b/src/main/resources/public/src/scss/theme/default/_modal.scss
@@ -26,4 +26,19 @@
 
     }
   }
+  // 폼 등록 / 수정 모달
+  &.form-edit {
+    width: $form-edit-modal-width;
+    height: $form-edit-modal-height;
+
+    .modal-content {
+      height: calc(#{$form-edit-modal-height} - #{$modal-header-height} - #{$modal-bottom-height});
+      padding: 0.625rem 1.25rem 1.25rem 1.25rem; // 10px 20px 20px 20px
+
+      .field-label {
+        display: inline-block;
+        margin: 1rem 0 0.5rem 0; // 16px 0 8px 0
+      }
+    }
+  }
 }
