--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -252,7 +252,7 @@ input, button, select, optgroup, textarea {
 
 .horizontal-bar {
   height: 0.0625rem;
-  margin: 0.9375rem 0;
+  margin: 0.9375rem;
   background-color: #EBEBEB;
 }
 
