--- a/src/main/resources/public/src/scss/template/_common.scss
+++ b/src/main/resources/public/src/scss/template/_common.scss
@@ -33,19 +33,9 @@
   word-break: break-all;
 }
 // 가로 선
-.horizontal-bar {
-  height: 0.0625rem; // 1px
-  margin: 0.9375rem 0; // 15px
-  background-color: $element-border-color;
-}
+@include horizontalBar(0.0625rem, 0.9375rem 0, $element-border-color);
 // 세로 선
-.vertical-bar {
-  width: $vertical-bar-width;
-  min-height: $vertical-bar-height;
-  border-right: $element-border;
-  margin: $vertical-bar-margin;
-  vertical-align: middle;
-}
+@include verticalBar($vertical-bar-width, $vertical-bar-height, $element-border, $vertical-bar-margin);
 // 아래 실선
 .under-bar {
   border-bottom: 0.0625rem solid $default-gray; // 1px
