--- a/src/main/resources/public/src/scss/template/_file-uploader.scss
+++ b/src/main/resources/public/src/scss/template/_file-uploader.scss
@@ -28,11 +28,7 @@
     }
 }
 
-.horizontal-bar {
-  height: 0.0625rem; // 1px
-  margin: 0.625rem 0; // 10px
-  background-color: $line-gray;
-}
+@include horizontalBar(0.0625rem,  0.625rem 0, $line-gray);
 
 .file-uploader {
   // edit 모드
