#9192 [ 코드 ] 코드 등록 시, 부모코드를 입력하지 않고 등록한 경우, 코드 트리 리스트에 출력되지 않는다. 일감 수정 진행

--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -37,7 +37,7 @@
                             <input id="txtCode" name="txtCode" type="text" th:value="${codeDetail?.code}" maxlength="100"/>
                         </div>
                         <div class="form-set form-div">
-                            <label th:text="#{code.label.pCode}" for="txtPCode"></label>
+                            <label class="required" th:text="#{code.label.pCode}" for="txtPCode"></label>
                             <input id="txtPCode" name="txtPCode" type="text" th:value="${codeDetail?.pCode}" maxlength="100"/>
                         </div>
                     </div>
@@ -212,6 +212,11 @@
 
             if (jsonData.code === null || jsonData.code === '') {
                 aliceJs.alertWarning([[#{code.msg.enterCode}]]);
+                return false;
+            }
+
+            if (jsonData.pCode === null || jsonData.pCode === '') {
+                aliceJs.alertWarning([[#{code.msg.enterPCode}]]);
                 return false;
             }
 
