#9193 [ 코드 ] [ 코드 ] 코드 등록 시, 코드 항목에 빈 값 저장 일감 수정 진행

--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -210,12 +210,12 @@
                 seqNum: document.getElementById('txtSeqNum').value
             };
 
-            if (jsonData.code === null || jsonData.code === '') {
+            if (jsonData.code === null || jsonData.code.trim() === '') {
                 aliceJs.alertWarning([[#{code.msg.enterCode}]]);
                 return false;
             }
 
-            if (jsonData.pCode === null || jsonData.pCode === '') {
+            if (jsonData.pCode === null || jsonData.pCode.trim() === '') {
                 aliceJs.alertWarning([[#{code.msg.enterPCode}]]);
                 return false;
             }
