--- a/src/main/resources/public/template/document/documentAdminSearch.html
+++ b/src/main/resources/public/template/document/documentAdminSearch.html
@@ -28,7 +28,7 @@
                 </form>
             </div>
             <div class="ml-auto">
-                <button th:class="default-fill" sec:authorize="hasAuthority('document.admin.create')" type="button" onclick="createDocument()" th:text="#{common.btn.add}"></button>
+                <button th:class="default-fill" sec:authorize="hasAuthority('document.admin.create')" type="button" onclick="openDocumentRegister()" th:text="#{common.btn.add}"></button>
             </div>
         </div>
         <div class="list" id="documentList"></div>
@@ -36,6 +36,8 @@
 </th:block>
 </body>
 <th:block layout:fragment="pageScript">
+    <script th:src="@{/assets/js/util/colorPalette-alice.js}"></script>
+    <script th:src="@{/assets/vendors/piklor/piklor.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[*/
         let offsetCount = 0;
@@ -65,12 +67,51 @@
             }
         }
 
+        // 업무흐름 수정
         function openDocumentEdit(documentId) {
-            window.open('/documents-admin/' + documentId + '/edit', '_blank', 'width=760, height=900, left=500, top=60');
+            //window.open('/documents-admin/' + documentId + '/edit', '_blank', 'width=760, height=900, left=500, top=60');
+
         }
 
-        function createDocument() {
-            window.open('/documents-admin/new', '_blank', 'width=760, height=900, left=500, top=60');
+        // 업무흐름 등록
+        function openDocumentRegister() {
+            //window.open('/documents-admin/new', '_blank', 'width=760, height=900, left=500, top=60');
+            aliceJs.sendXhr({
+                    method: 'GET',
+                    url: '/documents-admin/new',
+                    callbackFunc: function(xhr) {
+                        const documentAdminModal = new modal({
+                            title: i18n.msg('document.label.register'),
+                            body: xhr.responseText,
+                            classes: 'document-edit',
+                            buttons: [{
+                                content: i18n.msg('common.btn.register'),
+                                classes: "point-fill",
+                                bindKey: false,
+                                callback: function(modal) {
+                                    //saveDocument();
+                                }
+                            },{
+                                content: i18n.msg('common.btn.close'),
+                                classes: "default-line",
+                                bindKey: false,
+                                callback: function(modal) {
+                                    modal.hide();
+                                }
+                            }],
+                            close: {
+                                closable: false,
+                            },
+                            onCreate: function(modal) {
+                                //initColorPicker();
+                                //initIconSelector();
+                            }
+                        });
+                        documentAdminModal.show();
+
+                    },
+                    contentType: 'application/json; charset=utf-8'
+            });
         }
 
         function deleteDocument(documentId) {
