결함 #9195 [ 코드 ] 코드 항목, 부모 코드 항목 Max Length 일감 MR 응대

--- a/src/main/resources/public/src/scss/template/_tree.scss
+++ b/src/main/resources/public/src/scss/template/_tree.scss
@@ -23,6 +23,7 @@ ul.tree {
   li {
     position: relative;
     line-height: $tree-line-height;
+    padding-right: 0.125rem; // 2px
   }
   // Level 2
   // -------------------------
