#9474 [기본 SCSS] ITSM > contents > _contents-document.scss

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -252,7 +252,7 @@ input, button, select, optgroup, textarea {
 
 .horizontal-bar {
   height: 0.0625rem;
-  margin: 0.9375rem;
+  margin: 0.9375rem 0;
   background-color: #EBEBEB;
 }
 
