--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-tree-edit flex-column">
+    <div class="contents-tree-edit flex-row">
         <div class="tree-area">
             <div class="page-title">
                 <h1 th:text="#{code.label.code}">></h1>
