--- a/src/main/resources/public/src/scss/template/_tree.scss
+++ b/src/main/resources/public/src/scss/template/_tree.scss
@@ -45,7 +45,11 @@ ul.tree {
     }
 
     li {
+      display: block;
       padding-left: $tree-indentation;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
       // horizontal line
       &:before {
         content: '';
