--- a/src/main/resources/public/src/scss/theme/default/_mixin.scss
+++ b/src/main/resources/public/src/scss/theme/default/_mixin.scss
@@ -91,17 +91,16 @@
     .list {
         padding-top: 1.25rem; // 20px
         a, button { cursor: pointer; }
-        table {
+        .list-table {
             width: 100%;
-            thead {
+            .list-head {
                 display: block;
                 & > tr {
+                    display: flex;
                     height: 2.375rem; // 38px
                     border-bottom: .125rem solid $default-gray;
-                    display: flex;
                     th {
                         @include h4();
-                        vertical-align: middle;
                         text-align: left;
                         &:first-child {
                             padding-left: 1.25rem; // 20px
@@ -109,15 +108,15 @@
                     }
                 }
             }
-            tbody {
+            .list-body {
                 display: block;
                 height: 35.3125rem; // 565px;
                 overflow-y: auto;
                 width: 100%;
                 tr {
-                    height: 2.875rem;
-                    width: 100%;
                     display: table;
+                    width: 100%;
+                    height: 2.875rem;
                     &:hover {
                         background: $line-gray;
                     }
@@ -129,11 +128,9 @@
                     }
                     td {
                         @include h5();
-                        vertical-align: middle;
                         max-width: 0;
-                        text-overflow: ellipsis;
-                        overflow: hidden;
-                        white-space: nowrap;
+                        vertical-align: middle;
+                        padding-right: 0.625rem; // 10px
                         &:first-child {
                             padding-left: 1.25rem; // 20px
                         }
@@ -141,9 +138,9 @@
                           color: $dark-gray;
                         }
                         button {
+                          height: 1.875rem; // 30px
+                          padding: 0 0.3125rem; // 0 5px
                           margin: 0;
-                          padding: 0 5px;
-                          height: 30px;
                         }
                     }
                 }
