--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-tree-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-tree-edit.scss
@@ -15,6 +15,7 @@
       padding: 2.875rem 3.75rem 6.875rem 3.75rem; // 46px 60px 110px 60px
     @include list-template();
     .list {
+      width: 37.5rem; // 600px
       height: 37.5rem; // 600px
     }
   }
@@ -25,14 +26,11 @@
     font-weight: $font-weight-medium;
     & .scroll-wrap {
       height: 43.125rem; // 690px
-      margin: 0 0 0.625rem 0; // 10px
+      margin: 0 0 0.625rem 0; // 0 0 10px 0
       .form-wrap {
         flex: 1;
         overflow: auto;
         padding: 0 1.875rem 0 4.0625rem; // 0 30px 0 65px
-        .margin-top-50 {
-          margin-top: 3.125rem; // 50px
-        }
       }
     }
     .form-row {
