--- a/src/main/resources/public/template/auth/authList.html
+++ b/src/main/resources/public/template/auth/authList.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table>
-    <thead>
-    <tr>
-        <th width="25%" th:text="#{auth.label.authName}"></th>
-        <th width="25%" th:text="#{auth.label.authId}"></th>
-        <th width="50%" th:text="#{auth.label.authDesc}"></th>
-    </tr>
-    </thead>
-    <tbody class="list-body">
-        <tr class="no-data-found-list" th:if="${#arrays.isEmpty(authList)}">
-            <td colspan="3" th:text="#{common.msg.noData}"></td>
-        </tr>
-        <tr th:each="auth : ${authList}">
-            <td width="25%" id="authName" name="authName" th:text="${auth.authName}" th:id="${auth.authId}"></td>
-            <td width="25%" id="authId" name="authId" th:text="${auth.authId}"></td>
-            <td width="50%" id="authDesc" name="authDesc" th:text="${auth.authDesc}" class="align-left"></td>
-        </tr>
-    </tbody>
-</table>
+    <table class="list-table">
+        <thead class="list-head">
+            <tr>
+                <th width="25%" th:text="#{auth.label.authName}"></th>
+                <th width="25%" th:text="#{auth.label.authId}"></th>
+                <th width="50%" th:text="#{auth.label.authDesc}"></th>
+            </tr>
+        </thead>
+        <tbody class="list-body">
+            <tr class="no-data-found-list" th:if="${#arrays.isEmpty(authList)}">
+                <td colspan="3" th:text="#{common.msg.noData}"></td>
+            </tr>
+            <tr th:each="auth : ${authList}">
+                <td width="25%" id="authName" name="authName" th:text="${auth.authName}" th:id="${auth.authId}"></td>
+                <td width="25%" id="authId" name="authId" th:text="${auth.authId}"></td>
+                <td width="50%" id="authDesc" name="authDesc" th:text="${auth.authDesc}" class="align-left"></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
