--- a/src/main/resources/public/template/custom-code/customCodeList.html
+++ b/src/main/resources/public/template/custom-code/customCodeList.html
@@ -5,32 +5,32 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table>
-    <thead>
-    <tr>
-        <th style="width:50%" th:text="#{customCode.label.name}"></th>
-        <th style="width:20%" th:text="#{customCode.label.type}"></th>
-        <th style="width:15%" th:text="#{common.label.writer}"></th>
-        <th style="width:15%" th:text="#{common.label.writeDate}"></th>
-    </tr>
-    </thead>
-    <tbody class="list-body">
-    <input th:type="hidden" id="totalCount" name="totalcount" th:value="${customCodeCount}"/>
-    <tr class="no-data-found-list" th:if="${#arrays.isEmpty(customCodeList)}">
-        <td colspan="4" th:text="#{common.msg.noData}"></td>
-    </tr>
-    <tr th:each="customCode : ${customCodeList}">
-        <td  style="width:50%" class="align-left">
-            <a sec:authorize="!hasAuthority('custom.code.update')" th:text="${customCode.customCodeName}"
-               th:href="@{/custom-codes/{id}/view(id=${customCode.customCodeId})}"></a>
-            <a sec:authorize="hasAuthority('custom.code.update')" th:text="${customCode.customCodeName}"
-               th:href="@{/custom-codes/{id}/edit(id=${customCode.customCodeId})}"></a>
-        </td>
-        <td style="width:20%" th:text="#{|customCode.label.${customCode.type}|}"></td>
-        <td style="width:15%" th:text="${customCode.createUserName}"></td>
-        <td style="width:15%" th:name="createDt" th:text="${customCode.createDt}"></td>
-    </tr>
-    </tbody>
-</table>
+    <table class="list-table">
+        <thead class="list-head">
+            <tr>
+                <th style="width:50%" th:text="#{customCode.label.name}"></th>
+                <th style="width:20%" th:text="#{customCode.label.type}"></th>
+                <th style="width:15%" th:text="#{common.label.writer}"></th>
+                <th style="width:15%" th:text="#{common.label.writeDate}"></th>
+            </tr>
+        </thead>
+        <tbody class="list-body">
+            <input th:type="hidden" id="totalCount" name="totalcount" th:value="${customCodeCount}"/>
+            <tr class="no-data-found-list" th:if="${#arrays.isEmpty(customCodeList)}">
+                <td colspan="4" th:text="#{common.msg.noData}"></td>
+            </tr>
+            <tr th:each="customCode : ${customCodeList}">
+                <td  style="width:50%" class="align-left">
+                    <a sec:authorize="!hasAuthority('custom.code.update')" th:text="${customCode.customCodeName}"
+                       th:href="@{/custom-codes/{id}/view(id=${customCode.customCodeId})}"></a>
+                    <a sec:authorize="hasAuthority('custom.code.update')" th:text="${customCode.customCodeName}"
+                       th:href="@{/custom-codes/{id}/edit(id=${customCode.customCodeId})}"></a>
+                </td>
+                <td style="width:20%" th:text="#{|customCode.label.${customCode.type}|}"></td>
+                <td style="width:15%" th:text="${customCode.createUserName}"></td>
+                <td style="width:15%" th:name="createDt" th:text="${customCode.createDt}"></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
