--- a/src/main/resources/public/template/faq/faqList.html
+++ b/src/main/resources/public/template/faq/faqList.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <table>
-        <thead>
+<table class="list-table">
+    <thead class="list-head">
         <tr>
             <th style="width:20%;" th:text="#{faq.label.category}"></th>
             <th style="width:80%;" th:text="#{faq.label.title}"></th>
