--- a/src/main/resources/public/template/role/roleList.html
+++ b/src/main/resources/public/template/role/roleList.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table>
-    <thead>
-    <tr>
-        <th width="25%" th:text="#{role.label.name}"></th>
-        <th width="25%" th:text="#{role.label.id}"></th>
-        <th width="50%" th:text="#{role.label.desc}"></th>
-    </tr>
-    </thead>
-    <tbody class="list-body">
-    <tr th:each="role : ${roleList}">
-        <td width="25%" id="roleName" name="roleName" th:text="${role.roleName}" th:id="${role.roleId}" style="cursor: pointer;"></td>
-        <td width="25%" id="roleId" name="roleId" th:text="${role.roleId}"></td>
-        <td width="50%" id="roleDesc" name="roleDesc" th:text="${role.roleDesc}" class="align-left"></td>
-    </tr>
-    </tbody>
-</table>
+    <table class="list-table">
+        <thead class="list-head">
+            <tr>
+                <th width="25%" th:text="#{role.label.name}"></th>
+                <th width="25%" th:text="#{role.label.id}"></th>
+                <th width="50%" th:text="#{ro.tree
+                le.label.desc}"></th>
+            </tr>
+        </thead>
+        <tbody class="list-body">
+            <tr th:each="role : ${roleList}">
+                <td width="25%" id="roleName" name="roleName" th:text="${role.roleName}" th:id="${role.roleId}" style="cursor: pointer;"></td>
+                <td width="25%" id="roleId" name="roleId" th:text="${role.roleId}"></td>
+                <td width="50%" id="roleDesc" name="roleDesc" th:text="${role.roleDesc}" class="align-left"></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
