--- a/src/main/resources/public/template/user/userList.html
+++ b/src/main/resources/public/template/user/userList.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <table>
-        <thead>
+    <table class="list-table">
+        <thead class="list-head">
             <tr>
                 <th width="15%" th:text="#{user.label.name}" colspan="2"></th>
                 <th width="10%" th:text="#{user.label.id}"></th>
                 <th width="20%" th:text="#{user.label.email}"></th>
                 <th width="10%" th:text="#{user.label.department}"></th>
-                <th width="10%" th:text="#{user.label.position}"></th>
+                <th width="10%" th:text="#{user.label.position}" class="align-center"></th>
                 <th width="10%" th:text="#{user.label.officeNumber}"></th>
                 <th width="10%" th:text="#{user.label.mobileNumber}"></th>
                 <th width="15%" th:text="#{user.label.signUpDate}"></th>
@@ -39,7 +39,7 @@
                 </td>
                 <td width="20%" th:text="${user.email}"></td>
                 <td width="10%" th:text="${user.department}"></td>
-                <td width="10%" th:text="${user.position}"></td>
+                <td width="10%" th:text="${user.position}" class="align-center"></td>
                 <td width="10%" th:text="${user.officeNumber}"></td>
                 <td width="10%" th:text="${user.mobileNumber}"></td>
                 <td width="15%" th:name="createDt" th:text="${user.createDt}"></td>
