--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-list-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-list-edit.scss
@@ -7,62 +7,64 @@
  */
 
 .contents-list-edit {
-    @include contents-template();
-    // _flex.scss 템플릿에 "!important 추가" 검토 후 수정
-    flex-direction: row;
-    & > .list-area {
-        padding: 2.875rem 3.75rem 6.875rem 3.75rem; // 46px 60px 110px 60px
-        height: 100vh;
+  @include contents-template();
+  // _flex.scss 템플릿에 "!important 추가" 검토 후 수정
+  flex-direction: row;
+  & > .list-area {
+    padding: 2.875rem 3.75rem 6.875rem 3.75rem; // 46px 60px 110px 60px
+    height: 100vh;
+    flex: 1;
+    @include list-template();
+  }
+  & > .edit-area {
+    padding: 9.625rem 2.1875rem 3.125rem 0; // 154px 35px 50px 0
+    width: 38.125rem; // 610px
+    background: $white;
+    font-weight: $font-weight-medium;
+    & .scroll-wrap {
+      height: 43.125rem; // 690px
+      margin: 0 0 0.625rem 0; // 10px
+      .form-wrap {
         flex: 1;
-        @include list-template();
+        overflow: auto;
+        padding: 0 1.875rem 0 4.0625rem; // 0 30px 0 65px
+      }
     }
-    & > .edit-area {
-        padding: 9.625rem 2.1875rem 3.125rem 0; // 154px 35px 50px 0
-        width: 38.125rem; // 610px
-        background: $white;
-        font-weight: $font-weight-medium;
-        & .scroll-wrap {
-            height: 43.125rem; // 690px
-            margin: 0 0 0.625rem 0; // 10px
-            .form-wrap {
-                flex: 1;
-                overflow: auto;
-                padding: 0 1.875rem 0 4.0625rem; // 0 30px 0 65px
-            }
+    .form-set {
+      margin-top: 0.6875rem; // 11px
+      .designed-options li {
+        height: 2.5rem; // 40px
+        margin: 0;
+        padding: 0.75rem 0; // 12px
+        text-indent: 0.625rem; // 10px
+        &:hover {
+          background: $select-bg-color;
         }
-        .form-set {
-            margin-top: 0.6875rem; // 11px
-            .designed-options li {
-                height: 2.5rem; // 40px
-                margin: 0;
-                padding: 0.75rem 0; // 12px
-                text-indent: 0.625rem; // 10px
-                &:hover {
-                    background: $select-bg-color;
-                }
-                &[rel="hide"] {
-                    display: none;
-                }
-            }
-            .checkbox-all {
-                display: table-cell;
-                padding-top: 0.3125rem; // 5px
-            }
-            .checkbox-list {
-                height: 13.5rem; // 216px
-                border: 0.0625rem solid $element-border-color; // 1px
-                border-radius: $element-border-radius;
-                padding: 0.5rem 0.625rem; // 8px 10px
-                overflow-y: auto;
-                li {
-                    height: 1.5rem; // 24px
-                    color: $dark-gray;
-                    font-weight: $font-weight-regular;
-                    white-space: nowrap;
-                    text-overflow: ellipsis;
-                    overflow: hidden;
-                }
-            }
+        &[rel="hide"] {
+          display: none;
         }
+      }
+      .checkbox {
+        &-all {
+          display: table-cell;
+          padding-top: 0.3125rem; // 5px
+        }
+        &-list {
+          height: 13.5rem; // 216px
+          border: 0.0625rem solid $element-border-color; // 1px
+          border-radius: $element-border-radius;
+          padding: 0.5rem 0.625rem; // 8px 10px
+          overflow-y: auto;
+          li {
+            height: 1.5rem; // 24px
+            color: $dark-gray;
+            font-weight: $font-weight-regular;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+          }
+        }
+      }
     }
+  }
 }
