--- a/src/main/resources/public/template/role/roleList.html
+++ b/src/main/resources/public/template/role/roleList.html
@@ -9,8 +9,7 @@
             <tr>
                 <th width="25%" th:text="#{role.label.name}"></th>
                 <th width="25%" th:text="#{role.label.id}"></th>
-                <th width="50%" th:text="#{ro.tree
-                le.label.desc}"></th>
+                <th width="50%" th:text="#{ro.treele.label.desc}"></th>
             </tr>
         </thead>
         <tbody class="list-body">
