--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -3103,6 +3103,7 @@ button .icon-plus {
 }
 
 .itsm-container .contents-tree-edit > .tree-area .list {
+  width: 35.125rem;
   height: 37.5rem;
 }
 
