--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-list-edit">
+    <div class="contents-list-edit flex-row">
         <div class="list-area">
             <div class="page-title">
                 <h1 th:text="#{auth.label.auth}"></h1>
@@ -47,7 +47,7 @@
                         <label th:text="#{auth.label.urlList}"></label>
                         <div class="checkbox-list">
                             <ul>
-                                <li th:each="url : ${urlList}">
+                                <li class="text-ellipsis" th:each="url : ${urlList}">
                                     <label class="checkbox" th:for="${url?.url}" tabindex="0">
                                         <input type="checkbox" name="authUrl" th:id="${url?.url}" th:value="${url?.url}">
                                         <span></span>
