--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -85,7 +85,7 @@
                         }
                     } else {
                         document.getElementById('documentList').innerHTML = response.responseText;
-                        OverlayScrollbars(document.querySelector('.service-request'), {
+                        OverlayScrollbars(document.querySelector('.document-area'), {
                             className: 'scrollbar',
                             callbacks: {
                                 onScroll: function(e) {
@@ -111,7 +111,7 @@
             let divCardArea = document.querySelector('.card-area');
             let div = document.createElement('div');
             let divCardDummy = document.createElement('div');
-            divCardDummy.className = 'document-card-dummy';
+            divCardDummy.className = 'document-card-box';
 
             let aCard = document.createElement('a');
             if (document.getElementsByName('isRole')[0].value) {
@@ -128,7 +128,7 @@
             h3Card.innerText = data.documentName;
 
             let h5Card = document.createElement('h5');
-            h5Card.className = 'text-ellipsis';
+            h5Card.className = 'card-desc text-ellipsis';
             h5Card.innerText = data.documentDesc;
 
             let divDocumentIcon = document.createElement('div');
