#9211 [포탈] 메인 페이지 검색 영역에 대해 Max Length 속성이 적용되어 있지 않다.

--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -13,7 +13,7 @@
     </div>
     <div id="main-search" class="main-search align-center">
         <input type="text" class="col-8 icon-search" id="searchValue" name="searchValue" th:value="${portalSearchDto?.searchValue}"
-               th:placeholder="#{common.label.searchWord}"/>
+               th:placeholder="#{common.label.searchWord}" maxlength="100"/>
     </div>
     <div class="main-content">
         <ul class="card-group flex-row justify-content-between">
