#9474 [기본 SCSS] ITSM > contents > _contents-document.scss
- MR feedback

--- a/src/main/resources/public/template/custom-code/customCodeSearch.html
+++ b/src/main/resources/public/template/custom-code/customCodeSearch.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-list">
+    <div class="contents-list flex-column">
         <div class="page-title">
             <h1 th:text="#{customCode.label.customCode}"></h1>
             <h6 class="title-description" th:text="#{customCode.msg.searchDescription}"></h6>
