--- a/src/main/resources/public/template/document/documentAdminSearch.html
+++ b/src/main/resources/public/template/document/documentAdminSearch.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-list">
+    <div class="contents-list flex-column">
         <div class="page-title">
             <h1 th:text="#{document.label.businessFlow}"></h1>
             <h6 class="title-description" th:text="#{document.msg.adminSearchDescription}"></h6>
