--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-token">
+    <div class="contents-token flex-column">
         <div id="search-main" class="header">
             <div class="page-title">
                 <h1 th:text="#{token.label.list}"></h1>
