--- a/src/main/resources/public/template/dashboard/dashboardView.html
+++ b/src/main/resources/public/template/dashboard/dashboardView.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-token dashboard">
+    <div class="contents-token flex-column dashboard">
         <div id="search-main" class="header dashboard">
             <div class="page-title">
                 <h1 th:text="#{dashboard.label.dashboard}"></h1>
