--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -152,7 +152,7 @@
 </th:block>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-document">
+    <div class="contents-document flex-column">
         <div class="header">
             <div class="page-title">
                 <h1 th:text="#{document.label.document}"></h1>
