--- a/src/main/resources/public/template/download/downloadEdit.html
+++ b/src/main/resources/public/template/download/downloadEdit.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-edit scroll-wrap">
+    <div class="contents-edit flex-column scroll-wrap">
         <div class="header">
             <div class="page-title">
                 <h1 th:text="#{download.label.download}"></h1>
