--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-edit scroll-wrap">
+    <div class="contents-edit flex-column scroll-wrap">
         <div class="header">
             <div class="page-title">
                 <h1 th:text="#{notice.label.notice}"></h1>
