--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-list">
+    <div class="contents-list flex-column">
         <div class="page-title">
             <h1 th:text="#{notice.label.notice}"></h1>
             <h6 class="title-description" th:text="#{notice.msg.searchDescription}"></h6>
