--- a/src/main/resources/public/template/process/processAdminSearch.html
+++ b/src/main/resources/public/template/process/processAdminSearch.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-list">
+    <div class="contents-list flex-column">
         <div class="page-title">
             <h1 th:text="#{process.label.process}"></h1>
             <h6 class="title-description" th:text="#{process.msg.searchDescription}"></h6>
