--- a/src/main/resources/public/template/user/userSearch.html
+++ b/src/main/resources/public/template/user/userSearch.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-list">
+    <div class="contents-list flex-column">
         <div class="page-title">
             <h1 th:text="#{user.label.user}"></h1>
             <h6 class="title-description" th:text="#{user.msg.searchDescription}"></h6>
