--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -19,7 +19,7 @@
             <input type="hidden" id="userKey" name="userKey" th:value="${users?.userKey}"/>
             <input type="hidden" id="avatarUUID" name="avatarUUID" value=""/>
             <h3 class="under-bar bold" th:text="#{user.label.profile}"></h3>
-            <div class="flex-row align-items-start user-align-item">
+            <div class="flex-row justify-content-between user-align-item">
                 <div class="col-6">
                     <div th:style="${users?.userKey != null && !users?.platform.equals('user.platform.alice')} ? 'display: none' : ''">
                         <div class="form-set">
